# isaqb-foundation-prep

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  questions.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml
assets/: index-CDiTUywz.css  index-CnDH858d.css  index-DcK0N7rR.css  index-G-jgjP9o.js  index-o69aXVVB.js
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  constants.py  exam.py  questions.py
backend/app/seeds/: bundled_questions.py
backend/app/services/: scoring.py  seeder.py  shuffle.py
backend/tests/: test_scoring.py  test_shuffle.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  engine.ts  i18n.ts
frontend/src/components/: CategoryQuestion.tsx  PickQuestion.tsx
frontend/src/context/: LangContext.tsx
frontend/src/pages/: ExamPage.tsx  ResultsPage.tsx  StartPage.tsx
